k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: agenda-api
  labels:
    name: agenda-api
