k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: agenda-api
  namespace: agenda-api
spec:
  type: NodePort
  selector:
    app: agenda-api
  ports:
    - port: 8080
      nodePort: 30088
