k8s/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agenda-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: private.agenda.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agenda-service
                port:
                  number: 80
