k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agenda-ingress
  namespace: agenda
spec:
  ingressClassName: nginx
  rules:
    - host: 10.102.66.15.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agenda-api-service
                port:
                  number: 80
